--- a/.github/workflows/report-cml.yml
+++ b/.github/workflows/report-cml.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - uses: iterative/setup-cml@v1
       
       - name: Install dependencies
         run: |
@@ -33,7 +34,7 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npm install -g @dvcorg/cml
+          
           
           echo "## 📊 Rapport d'entraînement - Exercice 2" > report.md
           echo "" >> report.md
