--- a/.github/workflows/report-cml.yml
+++ b/.github/workflows/report-cml.yml
@@ -11,7 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: { python-version: '3.11' }
-      - uses: iterative/setup-cml@v1
+      
+      - uses: iterative/setup-cml@v2
+        with: { vega: false }
 
       # <-- Ajout: crée les dossiers attendus par train.py / evaluate.py
       - name: Prepare folders
@@ -23,22 +25,27 @@ jobs:
           pip install -r requirements.txt
           python train.py
           python evaluate.py   # doit générer metrics.json et reports/*.png
-
       - name: Build report
         shell: bash
         run: |
-          echo "## Rapport" > report.md
-          echo >> report.md
-          echo "### Métriques" >> report.md
-          echo '```json' >> report.md
-          cat metrics.json >> report.md || echo '{}' >> report.md
-          echo '```' >> report.md
-          echo >> report.md
-          [ -f reports/confusion_matrix.png ] && echo '![inline](reports/confusion_matrix.png)' >> report.md
-          [ -f reports/feature_importance.png ] && echo '![inline](reports/feature_importance.png)' >> report.md
+          set -euo pipefail; set +H
+          {
+            echo "## 📊 Rapport"
+            echo
+            echo "### Métriques"
+            echo '```json'
+            cat metrics.json
+            echo '```'
+            echo
+            [ -f reports/confusion_matrix.png ] && echo '![inline](reports/confusion_matrix.png)'
+            [ -f reports/feature_importance.png ] && echo '![inline](reports/feature_importance.png)'
+            echo
+          } > report.md
 
       - name: Post CML comment
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CML_SEND_TELEMETRY: "false"
-        run: cml comment create --commit-sha "$GITHUB_SHA" report.md
+        run: cml comment create --target="commit/$GITHUB_SHA" report.md
+
+
+        
